--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
+    "@tailwindcss/forms": "^0.3.3",
     "gatsby": "^3.10.2",
     "gatsby-background-image": "^1.5.3",
     "gatsby-background-image-es5": "^1.5.3",
