--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@reach/router": "^1.3.4",
     "@react-icons/all-files": "^4.1.0",
     "@tailwindcss/forms": "^0.3.3",
     "gatsby": "^3.10.2",
