--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gbimage-bridge": "^0.1.4",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-accessible-accordion": "^3.3.5",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0"
