--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby": "^3.10.2",
     "gatsby-background-image": "^1.5.3",
     "gatsby-background-image-es5": "^1.5.3",
+    "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-gatsby-cloud": "^2.10.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^1.10.1",
