--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@reach/router": "^1.3.4",
     "@react-icons/all-files": "^4.1.0",
     "@tailwindcss/forms": "^0.3.3",
+    "formik": "^2.2.9",
     "gatsby": "^3.10.2",
     "gatsby-background-image": "^1.5.3",
     "gatsby-background-image-es5": "^1.5.3",
