--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-background-image-es5": "^1.5.3",
     "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-gatsby-cloud": "^2.10.0",
+    "gatsby-plugin-google-gtag": "^3.12.0",
     "gatsby-plugin-image": "^1.10.1",
     "gatsby-plugin-manifest": "^3.10.0",
     "gatsby-plugin-offline": "^4.10.0",
